--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,18 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "solidityMeadow",
+            "request": "launch",
+            "name": "Debug Solidity (via unit test run)"
+        },
+
+        {
+            "type": "solidity",
+            "request": "launch",
+            "name": "Debug Solidity (via contract entry point)"
+        },
+
+        {
             "command": "npm start",
             "name": "Run npm start",
             "request": "launch",
@@ -15,5 +27,6 @@
             "request": "launch",
             "name": "Debug Solidity"
         }
+
     ]
 }
